[package]
name = "sol-pot"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_pot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ahash = "0.8.4"
anchor-lang = "0.29.0"
default-env = "0.1.1"
solana-security-txt = "1.1.1"
